Fixed spacing between images and text, and between terurn to top buttons and section headings on Sights page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -462,13 +462,18 @@ Though the images, linear-gradient values, and button differ from those given on
 .sight-type h3 {
     font-weight: bold;
     font-size: 5rem;
+    margin-top: 4rem;
     }
 .sight h4 {
     font-weight: bold;
     font-size: 4rem;
+    margin-top: 5rem;
     }
 .sight-type p, 
 .sight p {
     font-size: 2.5rem;
+    }
+.sight img {
+    margin-top: 2rem;
     }
 }
